--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "config": "^1.26.1",
     "express": "^4.15.3",
     "mongoose": "^4.10.4",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "winston-request-logger": "^1.0.7"
   },
   "devDependencies": {
     "jasmine": "^2.6.0"
